5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1637_1053.log
== TEST (2019-04-07 21:52:37) 
-- CODE:
x = "nome: "
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:53:09) 
-- CODE:
x = ("nome: ")
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:01:03) 
-- CODE:
x = ("nome: ")
if (x = cervo):
	msg = "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
File "XXXX", line 2
    if (x = cervo):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:01:15) 
-- CODE:
x = ("nome: ")
if (x == cervo):
	msg = "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (x == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:01:48) 
-- CODE:
x = ("nome: ")
if (x >= cervo):
	msg = "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (x >= cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:02:54) 
-- CODE:
x = ("nome do patrono: ")
if (x = cervo ):
	msg = "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
File "XXXX", line 2
    if (x = cervo ):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:03:53) 
-- CODE:
x = ("nome do patrono: ")
if (x > cervo ):
	msg = "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (x > cervo ):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:07:51) 
-- CODE:
x = ("nome do patrono: ")
if (x >= cervo):
	msg = "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (x >= cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:13:04) 
-- CODE:
x = ("nome do patrono: ")
if (x == cervo ):
	msg = "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (x == cervo ):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:13:11) 
-- CODE:
x = ("nome do patrono: ")
if (x == cervo):
	msg = "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (x == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:14:47) 
-- CODE:
x = ("nome do patrono: ")

if (x == cervo):
	msg = "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (x == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:15:02) 
-- CODE:
x = ("nome do patrono: ")

if (x == cervo):
	msg = "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- EXECUTION TIME:
0.139123
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/1053/main.py", line 3, in <module>
    if (x == cervo):
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:16:05) 
-- CODE:
x = ("nome do patrono: ")

if (x == cervo):
	msg = x + "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (x == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:16:41) 
-- CODE:
x = ("nome do patrono: ")
if (x = cervo)
	msg = x + "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
File "XXXX", line 2
    if (x = cervo)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:16:49) 
-- CODE:
x = ("nome do patrono: ")

if (x = cervo)
	msg = x + "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
File "XXXX", line 3
    if (x = cervo)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:16:56) 
-- CODE:
x = ("nome do patrono: ")

if (x = cervo):
	msg = x + "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
File "XXXX", line 3
    if (x = cervo):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:17:18) 
-- CODE:
x = ("nome do patrono: ")

if (x == cervo):
	msg = x + "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (x == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:18:54) 
-- CODE:
x = ("nome do patrono: ")

if (x != cervo):
	msg = x + "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- EXECUTION TIME:
0.19261
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/1053/main.py", line 3, in <module>
    if (x != cervo):
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:18:56) 
-- CODE:
x = ("nome do patrono: ")

if (x != cervo):
	msg = x + "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (x != cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:19:13) 
-- CODE:
x = ("nome do patrono: ")

if (x != cervo):
	msg = x + "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (x != cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:20:08) 
-- CODE:
x = "nome do patrono: "

if (x != ):
	msg = x + "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
File "XXXX", line 3
    if (x != ):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:20:25) 
-- CODE:
x = "nome do patrono: "

if (x != cervo):
	msg = x + "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (x != cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:21:14) 
-- CODE:
x = "nome do patrono: "

if (x == cervo):
	msg = x + "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (x == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 00:00:58) 
-- CODE:
x = "nome do patrono: "

if (x == cervo):
	msg = x + "eh patrono do Harry Potter"
else:
	msg = x +"nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (x == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 00:02:04) 
-- CODE:
x = "nome do patrono: "
name1 = cervo
if (x == name1):
	msg = x + "eh patrono do Harry Potter"
else:
	msg = x +"nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    name1 = cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 00:02:58) 
-- CODE:
name1 = cervo
x = "nome do patrono: "

if (x == name1):
	msg = x + "eh patrono do Harry Potter"
else:
	msg = x +"nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- EXECUTION TIME:
0.173189
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/1053/main.py", line 1, in <module>
    name1 = cervo
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 00:03:01) 
-- CODE:
name1 = cervo
x = "nome do patrono: "

if (x == name1):
	msg = x + "eh patrono do Harry Potter"
else:
	msg = x +"nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    name1 = cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 00:03:28) 
-- CODE:
name1 == cervo

x = "nome do patrono: "

if (x == name1):
	msg = x + "eh patrono do Harry Potter"
else:
	msg = x +"nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    name1 == cervo
NameError: name 'name1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 00:03:39) 
-- CODE:
name = cervo

x = "nome do patrono: "

if (x == name):
	msg = x + "eh patrono do Harry Potter"
else:
	msg = x +"nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    name = cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 00:03:52) 
-- CODE:
name = "cervo"

x = "nome do patrono: "

if (x == name):
	msg = x + "eh patrono do Harry Potter"
else:
	msg = x +"nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- OUTPUT:
nome do patrono: nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 00:04:12) 
-- CODE:
name = "cervo"

x = "nome do patrono: "

if (x == name):
	msg = x + "eh patrono do Harry Potter"
else:
	msg = x +"nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- EXECUTION TIME:
0.137731
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
nome do patrono: nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nome do patrono: nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 00:04:14) 
-- CODE:
name = "cervo"

x = "nome do patrono: "

if (x == name):
	msg = x + "eh patrono do Harry Potter"
else:
	msg = x +"nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- OUTPUT:
nome do patrono: nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 00:04:38) 
-- CODE:
name = "cervo"

x = ("nome do patrono: ")

if (x == name):
	msg = x + "eh patrono do Harry Potter"
else:
	msg = x +"nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- OUTPUT:
nome do patrono: nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 00:04:47) 
-- CODE:
name = "cervo"

x = print("nome do patrono: ")

if (x == name):
	msg = x + "eh patrono do Harry Potter"
else:
	msg = x +"nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    msg = x +"nao eh patrono do Harry Potter"
TypeError: unsupported operand type(s) for +: 'NoneType' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 00:05:14) 
-- CODE:
name = "cervo"

x = print("nome do patrono: ")

if (x == name):
	msg = "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- OUTPUT:
nome do patrono: 
nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 00:05:24) 
-- CODE:
name = "cervo"

x = print("nome do patrono:")

if (x == name):
	msg = "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- OUTPUT:
nome do patrono:
nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 00:05:45) 
-- CODE:
name = "cervo"

print("nome do patrono:")

if (x == name):
	msg = "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (x == name):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 00:06:11) 
-- CODE:
name = "cervo"

x = print("nome do patrono:")

if (x == name):
	msg = "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- OUTPUT:
nome do patrono:
nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:46:46) 
-- CODE:
name = cervo

print("")
	
if (x == name):
	msg = "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    name = cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:47:18) 
-- CODE:
n = cervo

print("")
	
if (x == n):
	msg = "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:48:29) 
-- CODE:
n = cervo

print(n)
	
if (x == n):
	msg = "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:48:43) 
-- CODE:
n = cervo

print(n)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:48:45) 
-- CODE:
n = cervo

print(n)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:49:04) 
-- CODE:
n = cervo

print(n)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:49:35) 
-- CODE:
n = "cervo"

print(n)
	

-- OUTPUT:
cervo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:50:14) 
-- CODE:
n = "cervo"

print(n)
	
if (n == n):
	msg = "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- OUTPUT:
cervo
eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:50:21) 
-- CODE:
n = "cervo"

print(n)
	
if (n == n):
	msg = "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- EXECUTION TIME:
0.149764
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo
eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo
eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:51:32) 
-- CODE:
n = "cervo"
input("patrono: ")
	
if (n == n):
	msg = "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- OUTPUT:
eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:52:24) 
-- CODE:
n = "cervo"
x = input("patrono: ")
	
if (x == n):
	msg = "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- OUTPUT:
eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:52:33) 
-- CODE:
n = "cervo"
x = input("patrono: ")
	
if (x == n):
	msg = "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- EXECUTION TIME:
0.176706
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:52:39) 
-- CODE:
n = "cervo"
x = input("patrono: ")
	
if (x == n):
	msg = "eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- OUTPUT:
eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:53:17) 
-- CODE:
n = "cervo"
x = input("patrono: ")
	
if (x == n):
	msg = x + "eh patrono do Harry Potter"
else:
	msg = x +  "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- EXECUTION TIME:
0.186984
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervoeh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:53:18) 
-- CODE:
n = "cervo"
x = input("patrono: ")
	
if (x == n):
	msg = x + "eh patrono do Harry Potter"
else:
	msg = x +  "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- OUTPUT:
cervoeh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:53:52) 
-- CODE:
n = "cervo"
x = input("patrono: ")
	
if (x == n):
	msg = (x) + "eh patrono do Harry Potter"
else:
	msg = (x) +  "nao eh patrono do Harry Potter"
	
resultado = msg

print(resultado)
-- EXECUTION TIME:
0.165578
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervoeh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:55:59) 
-- CODE:
n = "cervo"
x = input("patrono: ")
	
if (x == n):
	msg = (x) + " eh patrono do Harry Potter "
else:
	msg = (x) +  " nao eh patrono do Harry Potter "
	
resultado = msg

print(resultado)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:56:06) 
-- CODE:
n = "cervo"
x = input("patrono: ")
	
if (x == n):
	msg = (x) + " eh patrono do Harry Potter "
else:
	msg = (x) +  " nao eh patrono do Harry Potter "
	
resultado = msg

print(resultado)
-- EXECUTION TIME:
0.131269
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:57:53) 
-- CODE:
n = "cervo"
x = input("patrono: ")
	
if (x == n):
	msg = (x) + " eh patrono do Harry Potter "
else:
	msg = (x) +  " nao eh patrono do Harry Potter "
	
resultado = ms

print(resultado)
-- EXECUTION TIME:
0.187893
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/1053/main.py", line 9, in <module>
    resultado = ms
NameError: name 'ms' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:57:58) 
-- CODE:
n = "cervo"
x = input("patrono: ")
	
if (x == n):
	msg = (x) + " eh patrono do Harry Potter "
else:
	msg = (x) +  " nao eh patrono do Harry Potter "
	
resultado = msg

print(resultado)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:58:09) 
-- CODE:
n = "cervo"
x = input("patrono: ")
	
if (x == n):
	msg = (x) + " eh patrono do Harry Potter "
else:
	msg = (x) +  " nao eh patrono do Harry Potter "
	
resultado = msg

print(resultado)
-- EXECUTION TIME:
0.133481
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
